--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <div>
+      <header id="cabecalho">
+          <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+      </header>   
+  </div>
 </body>
 </html>
