--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">
+            Titulo
+        </h1>
+
+    </header>
     
 </body>
 </html>
