--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header> 
+    <header id="cabecalho">
+        <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+    </header> 
     
-    <main></main>
+    <main>
+        <img id="minha_foto" src="fotoatual.jpeg" alt="foto atual">
+    </main>
 
     <footer></footer>
 </body>
