--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header id="cabecalho" class="header">
+        <h1 id="titulo" class="heading">Project 1 - Lessons learned</h1>
+    </header>
     
 </body>
 </html>
