--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  
+  <header id="cabecalho">
+    <nav>
+      <ul>
+        <li>item1</li>
+        <li>item2</li>
+        <li>item3</li>
+      </ul>
+    </nav>
+    <h1 id="titulo">Licoes Aprendidas na Trybe</h1>
+  </header>
+
 </body>
 </html>
