--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <h1 id="titulo">
             Titulo
         </h1>
-
     </header>
+    <section>
+        <img id="minha_foto" src="imagens/eu-hiago-meme.jpeg" alt="Foto do autor">
+    </section>
     
 </body>
 </html>
