--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Gabriel de Oliveira Bins</h1>
 </header>
 <body>
+    <img id="minha_foto" src="fotoperfil.jpg" alt="foto de perfil">
     
 </body>
 </html>
