--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Primeiro projeto</h1>
     </header>
+    <img id="minha_foto" src="image/IMG_7173.JPG" alt="Cleiton Ribeiro social">
 </body>
 </html>
