--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     </nav>
     <h1 id="titulo">Licoes Aprendidas na Trybe</h1>
   </header>
+  <main>
+    <section>
+      <img id="minha_foto" src="./imagem_projeto.jpeg" alt="Foto Minha (Jeff Thierch)">
+    </section>
+  </main>
 
 </body>
 </html>
