--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Lessons Learned</title>
 </head>
 <body>
-    
+    <header id="cabecalho"><h1 id="titulo">Lições aprendidas - Trybe!</h1></header>
 </body>
 </html>
