--- a/index.html
+++ b/index.html
@@ -23,14 +23,66 @@
                 <li><a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN</a></li>
             </ul>
         </nav>
-
-        <main>
-            <img id="minha_foto" src="https://i.ibb.co/wyw1Q2C/Whats-App-Image-2021-08-18-at-19-09-10.jpg"
-                alt="photo of Matheus Nugas" width="150px">
-        </main>
     </header>
 
+    <main>
+        <img src="me.jpeg" alt="photo of matheus nugas" width="125px" id="minha_foto">
+        <div>
+            <ol id="licoes_aprendidas">
+                <li>Soft skills</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>HTML Semantico</li>
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Terminal</li>
+                <li>NPM</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>Redux</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Python</li>
+                <li>MySQL</li>
+                <li>MongoDB</li>
+                <li>DOM</li>
+                <li>Jest</li>
+                <li>SCRUM</li>
+                <li>NodeJS</li>
+            </ul>
+        </div>
+        <div>
+            <article id="lado-esquerdo">
+                <h2>Como foi até agora</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem obcaecati consectetur quos
+                    dolore
+                    voluptas iste, voluptate consequuntur officiis dolores illo hic dolorem aspernatur enim doloribus
+                    ipsam
+                    facere adipisci debitis incidunt! Odio sequi vitae accusamus a in animi quos vel, doloremque nobis
+                    quo,
+                    quaerat expedita alias asperiores facere. Qui voluptatum ab voluptatibus, reiciendis ea offi.
+                </p>
+            </article>
 
+            <aside id="lado-direito">
+                <h2>Expectativas para o futuro</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos non sed tempora voluptatem asperiores,
+                    quod fugiat dolor perspiciatis, porro quae tempore. Recusandae labore tenetur laudantium molestiae
+                    vel
+                    enim eius id.
+                </p>
+            </aside>
+        </div>
+
+    </main>
+
+    <footer>
+        Compiled by Matheus Luz Nugas, 2021.
+    </footer>
 </body>
 
 </html>
