--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <section class="barra-superior">
-
-            </section>
-            <section class="titulo"></section>
+        <header id="cabecalho">           
+                <h1 id="titulo">Teste</h1>         
         </header>
         <main>
 
