--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <header id="cabecalho" class="header">
         <h1 id="titulo" class="heading">Project 1 - Lessons learned</h1>
     </header>
-    
+    <img id="minha_foto" src="/rsz_fundo_transparente.png" alt="Autorretrato de VIctor SHin">
 </body>
 </html>
