--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <header id="cabecalho">
     <h1 id="titulo">titulo</h1>
   </header>
+  <main>
+    <img id="minha_foto" src="./Cópia de #SouTryber.png" alt="Minha foto pessoal">
+  </main>
     
 </body>
 </html>
