--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
     </header> 
     
     <main>
-        <img id="minha_foto" src="fotoatual.jpeg" alt="foto atual">
+        <article>
+            <img id="minha_foto" src="fotoatual.jpeg" alt="foto atual">
+            
+            <ol id="licoes_aprendidas">
+                <li>Git - Git Hub</li>
+                <li>Funcionamento da Internet</li>
+                <li>HTML</li>
+                <li>HTML Semântico</li>
+                <li>CSS</li>
+                <li>Autoconhecimento</li>
+                <li>Empatia</li>
+                <li>Dar e receber feedback</li>
+                <li>Ajudar outras pessoas</li>
+                <li>Buscar conhecimento alêm do conteúdo</li>
+            </ol>
+        </article>
     </main>
 
     <footer></footer>
