--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <header id="cabecalho">
         <h1 id="titulo">Lições aprendidas</h1>
     </header>
+
+    <main>
+        <img src="foto-juliane.jpg" alt="Foto de Juliane Cardoso" id="minha_foto">        
+    </main>
     
   </body>
 </html>
