--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <img id="minha_foto" src="minhafoto.jpeg" alt="victor calidor">
+    </main>
 </body>
 </html>
