--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <header id="cabecalho">
       <h1 id="titulo">Título</h1>
     </header>
+    <img
+      src="profile-photo.jpg"
+      alt="Minha foto"
+      id="minha_foto"
+      width="200px"
+    />
   </body>
 </html>
