--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <header id="cabecalho">
     <h1 id="titulo">[Lucca Neiva] Lessons Learned</h1>
   </header>
+  <main>
+    <img src="./rsz_1rsz_fotominha.jpg" alt="UMa foto minha com fundo vermelho e cabelo preso." id="minha_foto">
+  </main>
 </body>
 </html>
