--- a/index.html
+++ b/index.html
@@ -12,5 +12,18 @@
         <h1 id="titulo" class="heading">Project 1 - Lessons learned</h1>
     </header>
     <img id="minha_foto" src="/rsz_fundo_transparente.png" alt="Autorretrato de VIctor SHin">
+    <ol id="licoes_aprendidas" class="licoes_enumeradas">
+        <li>Unix</li>
+        <li>Shell</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Internet</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>HTML semântico</li>
+        <li>Seletores CSS</li>
+    </ol>
+
 </body>
 </html>
