first version of HTML

--- a/index.html
+++ b/index.html
@@ -9,5 +9,80 @@
 </head>
 <body>
     
+    <header>
+        <div>
+            <div>
+                <img src="#" alt="home icon">
+            </div>
+
+            <div>
+                <nav>
+                    <ul>
+                        <li>About me</li>
+                        <li>Skills</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <article>
+            <section>
+                <div>
+                    <h1>Gabriel Silvestre</h1>
+                </div>
+                <div>
+                    <ul>
+                        <li>Gender: Cis/Male</li>
+                        <li>Age: 20</li>
+                        <li>Nacionality: Brazzilian</li>
+                    </ul>
+                </div>
+            </section>
+
+            <section>
+                <p><!-- Descrição breve --></p>
+            </section>
+
+            <section>
+                <img src="#" alt="profile picture of Gabriel Silvestre">
+            </section>
+        </article>
+
+        <article>
+            <div>
+                <h2>Skills</h2>
+            </div>
+
+            <section>
+                <!-- Lista skills 1 -->
+            </section>
+
+            <section>
+                <h3>Soft-skills</h3>
+                <!-- Lista skills 2 -->
+            </section>
+        </article>
+
+        <aside>
+            <div>
+                <!-- Lista contatos -->
+            </div>
+        </aside>
+    </main>
+
+    <footer>
+        <div>
+            <nav>
+                <ul>
+                    <li></li>
+                    <!-- Lista com contatos + infos pessoais -->
+                </ul>
+            </nav>
+        </div>
+    </footer>
+
 </body>
 </html>
