--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     </head>
     <body>
         <header id="cabecalho">           
-                <h1 id="titulo">Teste</h1>         
+                <h1 id="titulo">Teste</h1> 
+                        
         </header>
         <main>
-
+            <img id="minha_foto" src="imagens/perfil.jpeg" alt="foto-victor-schlichting">
         </main>
         <footer>
 
