--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title id="cabecalho">Rafael Santos | Lessons Learned</title>
 </head>
 <body>
-    <h1 id="cabecalho">Lições aprendidas na Trybe</h1>
+    <header>
+    <h1 id="titulo">Lições aprendidas na Trybe</h1>
+    </header>
+    <div>
+    <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
+    </div>
 </body>
 </html>
