--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <header id="cabecalho">
       <h1 id="titulo">Título</h1>
     </header>
+    <img src="me.jpeg" alt="Eu, Natã, com uma blusa azul e uma parede laranja ao fundo" id="minha_foto">
   </body>
 </html>
