--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
                 <li>Ajudar outras pessoas</li>
                 <li>Buscar conhecimento alêm do conteúdo</li>
             </ol>
+
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>React</li>
+                <li>Python</li>
+                <li>Node</li>
+                <li>SQL</li>
+                <li>Me relacionar melhor</li>
+                <li>Assertividade</li>
+                <li>Liderança</li>
+                <li>Melhorar como pessoa</li>
+            </ul>
         </article>
     </main>
 
