--- a/index.html
+++ b/index.html
@@ -12,5 +12,20 @@
         <h1 id="titulo">Primeiro projeto</h1>
     </header>
     <img id="minha_foto" src="image/IMG_7173.JPG" alt="Cleiton Ribeiro social">
+    <section>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
+    </section>
+    
 </body>
 </html>
