--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
   <main>
     <section>
       <img id="minha_foto" src="./imagem_projeto.jpeg" alt="Foto Minha (Jeff Thierch)">
+
+      <section>
+        <h2>Ate o momento nos ja aprendemos .</h2>
+        <ol id="licoes_aprendidas">
+          
+          <li>Os Fundamentos do Desenvolvimento Web</li>
+          <li>Os Comandos do Bash</li>
+          <li>Como Funciona o Unix e seus Derivados</li>
+          <li>Oque e o Git e o GitHub</li>
+          <li>Comandos do Git (Git add, git commit, branch, checkout, pull e push, dentre outros </li>
+          <li>Aprendemos sobre o funcionamento da Internet e como ela se comunica com o Client</li>
+          <li>Estrutura Basica HTML</li>
+          <li>Propriedades basicas do CSS</li>
+          <li>HTML Semantico para deixar nossa pagina acessivel e com um bom SEO</li>
+          <li>Seletores, e diversas tecnicas de Posicionamento no CSS </li>
+          <li>Aprendemos sobre Soft Skills e sua importancia no mercado de trabalho e no nosso desenvolvimento como pessoa</li>
+        </ol>
+
+      </section>
+
     </section>
   </main>
 
