--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h1 id="titulo">titulo</h1>
   </header>
 
+  <img id="minha_foto" src="fredi-wilkens.jpeg" alt="foto de Frederico Wilkens de frente e sorrindo">
+
 </body>
 </html>
