--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <header id="cabecalho">
-    <h1>Gabriel de Oliveira Bins</h1>
+    <h1 id="titulo">Gabriel de Oliveira Bins</h1>
 </header>
 <body>
     <img id="minha_foto" src="fotoperfil.jpg" alt="foto de perfil">
