resolução dos requisitos 1 a 7, com correção de ortografia

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
       </ul>
       <a href="https://www.w3schools.com/" target="_blank">Maiores referências sobre HTML, acesse a página da W3Schools (em inglês)</a>
     </main>
-    <footer id="rodape">Todos os direitos reservados, Lucas</footer>
+    <footer id="rodape">Todos os direitos reservados, Lucas Oliveira</footer>
   </body>
 </html>
