--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <link rel="stylesheet" type="text/css"href="style.css">
 </head>
 <body>
+  <!--2. Adicione uma barra superior com um título-->
   <header id="cabecalho">
     <h1 id="titulo">Meu aprendizado</h1>
   </header>
+  <!--3. Adicione uma foto sua à página  -->
+  <img id="minha_foto" src="minha_foto.jpeg" alt="minha_foto">
 </body>
