--- a/index.html
+++ b/index.html
@@ -10,4 +10,17 @@
   </header>
   <!--3. Adicione uma foto sua à página  -->
   <img id="minha_foto" src="minha_foto.jpeg" alt="minha_foto">
+    <!--4. Adicione uma lista de lições aprendidas à página-->
+    <ol id="licoes_aprendidas">
+      <li>O que é Unix e Bash.</li>
+      <li>Principais comandos utilizados no Bash</li>
+      <li>O que é Git</li>
+      <li>O que é GitHub</li>
+      <li>Como sincronizar o Git com o GitHub</li>
+      <li>Entendendo a internet</li>
+      <li>Introdução sobre o HTML</li>
+      <li>Introdução sobre o CSS</li>
+      <li>HTML Semântico</li>
+      <li>Início ao conhecimento das soft skills</li>
+    </ol>
 </body>
