--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
 <meta name="viewport" content="width=device-width" />
 <link rel="stylesheet" href="style.css">
 
-
-
-
-
 </head>
 <body>
   <div id="cabecalho">
     <h1 id="titulo">Lessons Learned-Trybe</h1>
   </div>
+  <img id="minha_foto" src="fotos/foto.portfolio.jpeg" alt="foto de perfil da Millene Galetti-mulher com cabelo longo,cor castanho,óculos de grau,blusa preta">
 
 
 
