--- a/index.html
+++ b/index.html
@@ -16,6 +16,35 @@
     <section>
         <img id="minha_foto" src="imagens/eu-hiago-meme.jpeg" alt="Foto do autor">
     </section>
+    <main>
+        <ol id="licoes_aprendidas">
+           <li>Unix</li>
+           <li>Git</li>
+           <li>GitHub</li>
+           <li>Empatia</li>
+           <li>HTML</li>
+           <li>CSS</li>
+           <li>Slack</li>
+           <li>Zoom</li>
+           <li>Inspect</li>
+           <li>Semantica do HTML</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+         </ul>
+    </main>
+    <footer id="rodape">
+
+    </footer>
     
 </body>
 </html>
