correcting: brazzilian > brazilian. In nationality

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <ul>
                         <li>Gender: Cis/Male</li>
                         <li>Age: 20</li>
-                        <li>Nacionality: Brazzilian</li>
+                        <li>Nacionality: Brazilian</li>
                     </ul>
                 </div>
             </section>
