--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   <header id="cabecalho">
     <h1 id="titulo">Lessons Learned - Trybe</h1>
   </header>
+
+  <main>
+    <img id="minha_foto" src="me.jpg" alt="Foto de rapaz sorrindo">
+  </main>
 </body>
 </html>
