--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
   </header>
   <main>
     <img src="./rsz_1rsz_fotominha.jpg" alt="UMa foto minha com fundo vermelho e cabelo preso." id="minha_foto">
+    <div>
+      <ol id="licoes_aprendidas">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+    </div>
   </main>
 </body>
 </html>
