--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
     <h1 id="titulo">titulo</h1>
   </header>
   <main>
-    <img id="minha_foto" src="./Cópia de #SouTryber.png" alt="Minha foto pessoal">
+    <img id="minha_foto" src="https://ca.slack-edge.com/TMDDFEPFU-U02AFHVADQT-074f7bc1a8bc-192" alt="Minha foto pessoal">
+    <section>
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>HTML Semântico</li>
+      </ol>
+    </section>
   </main>
     
 </body>
