--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Primeiro Projeto</title>
   </head>
   <body>
-    <header>
-      <h1 id="cabecalho">Primeiro Projeto: Lessons learned!</h1>
+    <header id="cabecalho">
+      <h1 id="titulo">Primeiro Projeto: Lessons learned!</h1>
     </header>
   </body>
 </html>
