--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 	<header id="cabecalho">
-		<h1 id="titulo"></h1>
+		<h1 id="titulo">Lições aprendidas - Trybe!</h1>
 	</header>
+
+	<img id="minha-foto" src="minha-foto.jpg" alt="Foto pessoal de Victor Hugo">
+
 </body>
-</html>
+</html> 
