--- a/index.html
+++ b/index.html
@@ -17,5 +17,17 @@
       id="minha_foto"
       width="200px"
     />
+    <ol id="licoes_aprendidas">
+      <li>HTML: Estruturas básicas</li>
+      <li>HTML: Semântica!</li>
+      <li>CSS: Estilos básicos</li>
+      <li>CSS: Seletores e posicionamento</li>
+      <li>Git: Comandos básicos</li>
+      <li>Git: Fluxo de trabalho</li>
+      <li>GitHub: Gerenciando repositórios remotos</li>
+      <li>GitHub Pages: Minha página na Internet!</li>
+      <li>Soft skills: A importância de ser inteiro</li>
+      <li>Kahoot: How to be the fastest man alive! ⚡</li>
+    </ol>
   </body>
 </html>
