--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    <header id="cabecalho"><h1 id="titulo">Lições aprendidas - Trybe!</h1></header>
-</head>
-<body>
     
+<body>
+    <header id="cabecalho"><h1 id="titulo">Lições aprendidas - Trybe!</h1></header>
+    <img id="minha_foto" src="images/I.jpg" alt="foto-calixto">
+</head>
 </body>
 </html>
