--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1 id="titulo" class="heading">Project 1 - Lessons learned</h1>
     </header>
     <img id="minha_foto" src="/rsz_fundo_transparente.png" alt="Autorretrato de VIctor SHin">
+    <div class="listas">
     <ol id="licoes_aprendidas" class="licoes_enumeradas">
         <li>Unix</li>
         <li>Shell</li>
@@ -25,5 +26,18 @@
         <li>Seletores CSS</li>
     </ol>
 
+    <ul id="licoes_a_aprender" class="licoes_naoenumeradas">
+        <li>JavaScript</li>
+        <li>Lógica de Programação</li>
+        <li>HTML e CSS avançado</li>
+        <li>React</li>
+        <li>Metodologias Ageis</li>
+        <li>Redux</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+        <li>Phyton</li>
+        <li>NodeJS</li>
+    </ul>
+</div>
 </body>
 </html>
