--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
   <title>Lessons Learned</title>
 </head>
 <body>
   <header id="cabecalho">
     <h1 class="text-center" id="titulo">Lessons Learned</h1>
   </header>
+  <div class="container">
+    <img src="foto.jpg" alt="uma foto minha" id="minha_foto">
+  </div>
 </body>
 </html>
