--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
           <li>Aprendemos sobre Soft Skills e sua importancia no mercado de trabalho e no nosso desenvolvimento como pessoa</li>
         </ol>
 
+        <h2>Lista de Habilidades que ainda desejo aprender</h2>
+
+        <ul id="licoes_a_aprender">
+          <li>JavaScript e como deixar nossas paginas interativas com ele</li>
+          <li>Mais funcionalidades do HTML afim de melhorar minha pagina</li>
+          <li>Propriedades mais atuais de CSS tornando meu trabalho muito mais lindo e responsivo</li>
+          <li>Como fazer Testes Unitarios</li>
+          <li>Como utlizar o React</li>
+          <li>O que sao Metodologias Ageis e como utilizalas</li>
+          <li>Integracao de APIS</li>
+          <li>SQL para aprender a utilizar Banco de Dados</li>
+          <li>MongoDB</li>
+          <li>NodeJS</li>
+        </ul>
+
       </section>
 
     </section>
