--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
       <h1 id="titulo">Título</h1>
     </header>
     <img src="me.jpeg" alt="Eu, Natã, com uma blusa azul e uma parede laranja ao fundo" id="minha_foto">
+    <ol id="licoes_aprendidas">
+      <li>Unix</li>
+      <li>Shell</li>
+      <li>Git</li>
+      <li>GitHub</li>
+      <li>Internet</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>HTML Semântico</li>
+      <li>Emoções</li>
+      <li>Empatia</li>
+    </ol>
   </body>
 </html>
