--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
   <header id="cabecalho">
     <h1 id="titulo">titulo</h1>
   </header>
-
   <img id="minha_foto" src="fredi-wilkens.jpeg" alt="foto de Frederico Wilkens de frente e sorrindo">
+  <ol id="licoes_aprendidas">
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Git</li>
+    <li>Internet</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Empatia</li>
+    <li>Autoconhecimento</li>
+    <li>HTML Semantico</li>
+    <li>Profissionalismo</li>
+  </ol>
+
 
 </body>
 </html>
