3 requisito concluido adicionado pasta com imagens

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <header id="cabecalho">
         <h1 id="titulo">Project lessons learned</h1>
     </header>
+    <main>
+        <article>
+            <img id="minha_foto" src="imagens/fiora.jpg" alt="Fiora, a duelista">
+        </article>
+    </main>
 </body>
-</html>
+</html> 
