--- a/index.html
+++ b/index.html
@@ -29,5 +29,17 @@
       <li>Soft skills: A importância de ser inteiro</li>
       <li>Kahoot: How to be the fastest man alive! ⚡</li>
     </ol>
+    <ul id="licoes_a_aprender">
+      <li>SQL</li>
+      <li>NoSQL</li>
+      <li>React</li>
+      <li>Comunicação</li>
+      <li>Liderança</li>
+      <li>Javascript</li>
+      <li>Testes unitários</li>
+      <li>Testes de integração</li>
+      <li>Testes automatizados</li>
+      <li>Continuous Integration (CI)</li>
+    </ul>
   </body>
 </html>
