--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <header id="cabecalho">
 		<h1 id="titulo">Aprendizado adquirido-Trybe!</h1>
   </header>
+	<main>
+		<img id="minha_foto" src="rsz_pessoaprogamando.jpg" alt="Pessoa Progamando">
+	</main>
     
 </body>
 </html>
