--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
         <li>NodeJS</li>
     </ul>
 </div>
+
+<footer id="rodape" class="footer">
+Criado por Victor Shin Kamiguchi
+</footer>
 </body>
 </html>
