adicionando nav no index.html e style.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
   <header id="cabecalho">
     <h1 id="titulo">Lições aprendidas - Trybe | turma 16-B</h1>
+    <nav id="navegacao">
+        <ul>
+            <li>Home</li>
+            <li>Contato</li>
+        </ul>
+    </nav>
   </header>
 
   <img id="minha_foto" src="https://media-exp1.licdn.com/dms/image/C4D03AQHrtU0WZrCsfQ/profile-displayphoto-shrink_800_800/0/1599308915208?e=1635379200&v=beta&t=E8lEBVEm0HqTgio20HqR3C-_LMmWxk9ACIapnSSlDOI" alt="foto do aluno">
