--- a/index.html
+++ b/index.html
@@ -8,10 +8,22 @@
 </head>
 <body>
     <header>
-    <h1 id="titulo">Lições aprendidas na Trybe</h1>
+    <h1 id="titulo">Project Trybe</h1>
     </header>
     <div>
     <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
     </div>
+    <ul id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Diferença de Simpatia para empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>HTML Semântico</li>
+        <li>VSCode</li>
+    </ul>
 </body>
 </html>
