4 - lista de licoes

--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
     </head>
     <body>
         <header id="cabecalho">           
-                <h1 id="titulo">Teste</h1> 
-                        
+                <h1 id="titulo">Teste</h1>
         </header>
         <main>
             <img id="minha_foto" src="imagens/perfil.jpeg" alt="foto-victor-schlichting">
+            <ol id="licoes_aprendidas">
+                <h2>Lições aprendidas:</h2>
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Markdown</li>
+                <li>Internet</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>CSS Seletores e Posicionamento</li>
+                <li>HTML Semântico</li>
+            </ol>
         </main>
         <footer>
-
         </footer>
     </body>
 </html>
