--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
     </header>
 
     <main>
-        <img src="foto-juliane.jpg" alt="Foto de Juliane Cardoso" id="minha_foto">        
+        <img src="foto-juliane.jpg" alt="Foto de Juliane Cardoso" id="minha_foto">  
+        
+        <section>
+            <h2>Coisas valiosas que a Trybe me ensinou até agora:</h2>
+            <ol id="licoes_aprendidas">
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>HTML Semântico</li>
+                <li>Pesquisar na internet de forma eficiente</li>
+                <li>Colaboração</li>
+                <li>Não ter medo de perguntar</li>
+                <li>Espírito de equipe</li>
+                <li>Aprender com os erros</li>
+            </ol>
+        </section>
     </main>
     
   </body>
