--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <header id="cabecalho"> 
         <h1 id="titulo">Título</h1>
     </header>
+    <main>
+        <article>
+            <img id="minha_foto" src="minha-foto.jpg" alt="Foto de Felipe Sanches">
+        </article>
+    </main>
 </body>
 </html>
