--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
       <li>Testes automatizados</li>
       <li>Continuous Integration (CI)</li>
     </ul>
+    <footer id="rodape"></footer>
   </body>
 </html>
