--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <li>item1</li>
         <li>item2</li>
         <li>item3</li>
+        <li><a href="https://github.com/JeffThierch" target="_blank">GitHub</a></li>
+        <li>LinkedIn</li>
       </ul>
     </nav>
     <h1 id="titulo">Licoes Aprendidas na Trybe</h1>
@@ -21,6 +23,8 @@
   <main>
     <section>
       <img id="minha_foto" src="./imagem_projeto.jpeg" alt="Foto Minha (Jeff Thierch)">
+
+      <!-- <a href="https://www.betrybe.com/">Trybe</a> -->
 
       <section>
         <h2>Ate o momento nos ja aprendemos .</h2>
