--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     <h1 id="titulo">Lessons Learned-Trybe</h1>
   </div>
   <img id="minha_foto" src="fotos/foto.portfolio.jpeg" alt="foto de perfil da Millene Galetti-mulher com cabelo longo,cor castanho,óculos de grau,blusa preta">
-
+<ol id="licoes_aprendidas">
+  <li>Unix</li>
+  <li>Git</li>
+  <li>GitHub</li>
+  <li>Empatia</li>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>Slack</li>
+  <li>Zoom</li>
+  <li>Semantic HTML</li>
+  <li>VSCODE</li>
+</ol>
 
 
 </body>
