--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     </ul>
 </div>
 
+<a href="https://www.betrybe.com/" target="_blank">TRYBE</a>
+
 <footer id="rodape" class="footer">
 Criado por Victor Shin Kamiguchi
 </footer>
