--- a/index.html
+++ b/index.html
@@ -15,17 +15,31 @@
     <img src="./rsz_1rsz_fotominha.jpg" alt="UMa foto minha com fundo vermelho e cabelo preso." id="minha_foto">
     <div>
       <ol id="licoes_aprendidas">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Unix</li>
+        <li>Shell</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>Internet e seu funcionamento</li>
+        <li>HTML</li>
+        <li>HTML Semântico</li>
+        <li>CSS</li>
+        <li>Slack</li>
       </ol>
+    </div>
+    <div>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>Lógica de Programação</li>
+        <li>DOM</li>
+        <li>Events</li>
+        <li>Web Storage</li>
+        <li>Formulários HTML e CSS</li>
+        <li>Jest</li>
+        <li>Flexbox</li>
+        <li>High Order Functions</li>
+        <li>JavaScript ES6</li>
+      </ul>
     </div>
   </main>
 </body>
