Primeiras mudanças CSS

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - Trybe</h1>
-        <nav id="navegacao">
-            <ul>
-                <li>Home</li>
-                <li>Login</li>
-                <li><a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN</a></li>
-            </ul>
-        </nav>
     </header>
+
+    <nav id="navegacao">
+        <ul>
+            <li>Home</li>
+            <li>Login</li>
+            <li><a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN</a></li>
+        </ul>
+    </nav>
 
     <main>
         <img src="me.jpeg" alt="photo of matheus nugas" width="125px" id="minha_foto">
         <div>
             <ol id="licoes_aprendidas">
+                <h4>Lições Aprendidas</h4>
                 <li>Soft skills</li>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -41,6 +43,7 @@
                 <li>NPM</li>
             </ol>
             <ul id="licoes_a_aprender">
+                <h4>Lições a Aprender</h4>
                 <li>Redux</li>
                 <li>JavaScript</li>
                 <li>React</li>
@@ -80,7 +83,7 @@
 
     </main>
 
-    <footer>
+    <footer id="rodape">
         Compiled by Matheus Luz Nugas, 2021.
     </footer>
 </body>
