--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,6 +24,19 @@
     <li>HTML Semantico</li>
     <li>Profissionalismo</li>
   </ol>
+
+  <ul id="licoes_a_aprender">
+    <li>JavaScript</li>
+    <li>Logica de Programação</li>
+    <li>Algorítimos</li>
+    <li>Objetos</li>
+    <li>Funções</li>
+    <li>DOM</li>
+    <li>Eventos</li>
+    <li>Web Storage</li>
+    <li>HTML & CSS Forms</li>
+    <li>Bibliotecas JavaScript</li>
+  </ul>
 
 
 </body>
