--- a/index.html
+++ b/index.html
@@ -11,5 +11,21 @@
                 lasdfsadfasdfasd
             </h1>
         </header>
+        <img id="minha_foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS79JnJy_zkaMg-tUw2qbapJ4ESUpD3paoVog&usqp=CAU" alt="profile pícture">
+        
+        <div>
+            <ol id="licoes_aprendidas">
+                <li> HTML </li>
+                <li> CSS </li>
+                <li> UNIX </li>
+                <li> BASH </li>
+                <li> GIT </li>
+                <li> GITHUB </li>
+                <li> COMO PESQUISAR NA INTERNET </li>
+                <li> SOFTSKILLS </li>
+                <li> JS </li>
+                <li> INTERNET </li>
+            </ol>
+        </div>
     </body>
   </html>
