--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header>
+    <title>
+      <h1>Lições Aprendidas - Trybe</h1>
+    </title>
+  </header>
 </body>
 </html>
