--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
      <header id="cabecalho">
          <h1 id="titulo">Lições aprendidas - Trybe!</h1>
      </header>
+     <img src="minha_foto.jpg" alt="garoto sorrindo" id="minha_foto">
      
      
  </body>
