--- a/index.html
+++ b/index.html
@@ -20,18 +20,32 @@
       <div>
           <section>
               <h2>Lições</h2>
-                <ol id="licoes_aprendidas">
-                    <li>Comandos do Terminal</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Semántica do HTML/CSS</li>
-                    <li>SoftSkills</li>
-                    <li>Empatia</li>
-                    <li>Zoom</li>
-                    <li>Slack</li>
-                </ol>
+              <div>
+                  <ol id="licoes_aprendidas">
+                      <li>Comandos do Terminal</li>
+                      <li>Git</li>
+                      <li>GitHub</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>Semántica do HTML/CSS</li>
+                      <li>SoftSkills</li>
+                      <li>Empatia</li>
+                      <li>Zoom</li>
+                      <li>Slack</li>
+                  </ol>
+                  <ul id="licoes_a_aprender">
+                      <li>JavaScript</li>
+                      <li>Front-End</li>
+                      <li>Back-End</li>
+                      <li>Lógica de Programação</li>
+                      <li>React</li>
+                      <li>SQL</li>
+                      <li>Node</li>
+                      <li>DOM</li>
+                      <li>Forms</li>
+                      <li>CSS Responsive</li>
+                  </ul>
+              </div>
           </section>
       </div>
     </main>
