Adicionados arquivo html, css, requisitos 01 e 0

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Lessons Learned SD 16 B</title>
     <h1 id="titulo">Lessons Learned SD 16 B</h1>
   </header>
-  <body></body>
+  <body>
+    <img id="minha_foto" src="foto_fas.jpg" />
+  </body>
 </html>
