--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned</h1>
     </header>
+
+    <section id="foto_section" class="lado-esquerdo">
+        <img id="minha_foto" src="http://grazziano.space/img/60292620_2156558624461684_6812711201185726464_o.jpg"
+            alt="Foto de Grazziano">
+    </section>
 </body>
 
 </html>
