--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+
 <head lang="pt-br">
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css"href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
   <!--2. Adicione uma barra superior com um título-->
   <header id="cabecalho">
@@ -10,17 +12,30 @@
   </header>
   <!--3. Adicione uma foto sua à página  -->
   <img id="minha_foto" src="minha_foto.jpeg" alt="minha_foto">
-    <!--4. Adicione uma lista de lições aprendidas à página-->
-    <ol id="licoes_aprendidas">
-      <li>O que é Unix e Bash.</li>
-      <li>Principais comandos utilizados no Bash</li>
-      <li>O que é Git</li>
-      <li>O que é GitHub</li>
-      <li>Como sincronizar o Git com o GitHub</li>
-      <li>Entendendo a internet</li>
-      <li>Introdução sobre o HTML</li>
-      <li>Introdução sobre o CSS</li>
-      <li>HTML Semântico</li>
-      <li>Início ao conhecimento das soft skills</li>
-    </ol>
+  <!--4. Adicione uma lista de lições aprendidas à página-->
+  <ol id="licoes_aprendidas">
+    <li>O que é Unix e Bash.</li>
+    <li>Principais comandos utilizados no Bash</li>
+    <li>O que é Git</li>
+    <li>O que é GitHub</li>
+    <li>Como sincronizar o Git com o GitHub</li>
+    <li>Entendendo a internet</li>
+    <li>Introdução sobre o HTML</li>
+    <li>Introdução sobre o CSS</li>
+    <li>HTML Semântico</li>
+    <li>Início ao conhecimento das soft skills</li>
+  </ol>
+  <!--5. Crie uma lista de lições que ainda deseja aprender para a página-->
+  <ul id="licoes_a_aprender">
+    <li>Aprofundamento do HTML</li>
+    <li>Aprofundamento do CSS</li>
+    <li>JavaScript</li>
+    <li>Técnicas para melhorar o acesso do usuário</li>
+    <li>Técnicas para aumentar o engajamento da página</li>
+    <li>Trabalhar o design dos sites de forma ficar mais agradável</li>
+    <li>Formas eficientes de resolver "bugs" no site</li>
+    <li>Entender que outras aplicações são importantes também ter conhecimento ao fazer uma página, por exemplo, programas de edição de imagem</li>
+    <li>Aplicação Front-end</li>
+    <li>Aplicação Back-end</li>
+  </ul>
 </body>
