--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@
       <li>Emoções</li>
       <li>Empatia</li>
     </ol>
+    <ul id="licoes_a_aprender">
+      <li>JavaScript</li>
+      <li>DOM</li>
+      <li>CSS Responsivo</li>
+      <li>Testes Unitários</li>
+      <li>Jest</li>
+      <li>React</li>
+      <li>Metodologias Ágeis</li>
+      <li>SQL</li>
+      <li>MongoDB</li>
+      <li>Estrutura de Dados</li>
+    </ul>
   </body>
 </html>
