--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
                 <li>Aprender com os erros</li>
             </ol>
         </section>
+
+        <section>
+            <h2>Coisas que ainda espero aprender na Trybe:</h2>
+            <ul id="licoes_a_aprender">
+                <li>Sites Responsivos</li>
+                <li>JavaScript</li>
+                <li>Testes Unitários</li>
+                <li>React</li>
+                <li>Metodologias Ágeis</li>
+                <li>Autoconhecimento</li>
+                <li>Superar a insegurança</li>
+                <li>Comunicação</li>
+                <li>Liderança</li>
+                <li>Pensamento Crítico</li>
+            </ul>
+        </section>
     </main>
     
   </body>
