--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
         <li>Inspect</li>
         <li>HTML Semântico</li>
       </ol>
+
+        <ul id="licoes_a_aprender">
+          <li>JavaScript</li>
+          <li>DOM</li>
+          <li>Forms</li>
+          <li>Responsividade</li>
+          <li>ES6</li>
+          <li>HOF</li>
+          <li>Unit Tests</li>
+          <li>React</li>
+          <li>Node</li>
+          <li>SQL</li>
+        </ul>
+      
     </section>
   </main>
     
