--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
       </ul>
     </div>
   </main>
+  <footer id="rodape">
+    <p>Projeto: <a href="https://github.com/tryber/sd-016-b-project-lessons-learned" target="_blank">Lessons Learned</a>; made by: lucca neiva :D</p>
+  </footer>
 </body>
 </html>
