--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                   </ul>
               </div>
           </section>
+          <footer id="rodape">
+          </footer>
       </div>
     </main>
 </body>
