--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
   </header>
 
   <main>
-    <img id="minha_foto" src="me.jpg" alt="Foto de rapaz sorrindo">
+    <figure><img id="minha_foto" src="me.jpg" alt="Foto de rapaz sorrindo"></figure>
+
+    <section>
+      <ol id="licoes_aprendidas">
+        <li>Git e Github</li>
+        <li>Comandos Git</li>
+        <li>Bash</li>
+        <li>Comando do Bash</li>
+        <li>Unix</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Box Model</li>
+        <li>HTML Semântico</li>
+        <li>Requisições Web</li>
+      </ol>
+    </section>
   </main>
 </body>
 </html>
