Requisito 4 finalizado e corrigido requisito 3

--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 		<h1 id="titulo">Lições aprendidas - Trybe!</h1>
 	</header>
 
-	<img id="minha-foto" src="minha-foto.jpg" alt="Foto pessoal de Victor Hugo">
+	<img id="minha_foto" src="minha-foto.jpg" alt="Foto pessoal de Victor Hugo">
 
+	<ol id="licoes_aprendidas">
+		<li>Unix</li>
+		<li>Bash</li>
+		<li>Git</li>
+		<li>GitHub</li>
+		<li>Inteligência Emocional</li>
+		<li>Emoções</li>
+		<li>HTML</li>
+		<li>CSS</li>
+		<li>HTML Semântico</li>
+		<li>Box Model</li>
+	</ol>
+
+	
 </body>
 </html> 
