--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
     <header id="cabecalho">
         <h1>Lições aprendidas - HTML e CSS</h1>
     </header>
-    <section>
-        <img src="foto-pessoal.jpg" alt="Foto pessoal" id="minha_foto">
-    </section>
+    <img src="foto-pessoal.jpg" alt="Foto pessoal" id="minha_foto">
+    <main>
+        <h3>Lista de lições aprendidas</h3>
+        <ol id="licoes_aprendidas">
+            <li>Básico de bash</li>
+            <li>Git</li>
+            <li>Fundamentos da internet</li>
+            <li>Básico de HTML</li>
+            <li>HTML semântico</li>
+            <li>CSS</li>
+            <li>Extensões uteis pra desenvolvimento web</li>
+            <li>Importância das Soft Skills</li>
+            <li>Empatia</li>
+            <li>Autoconhecimento</li>
+        </ol>
+    </main>
 </body>
 </html>
 
-1366 768
+<!-- 1366 768 -->
