--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
     </ul>
 </div>
 
+<article class="article1">
+    Durante as aulas na Trybe, aprendemos diversos assuntos de forma progressiva
+    e consciente. Dessa forma todos podem acompanhar o curso, mesmo com experiências diversas. A comunidade criada é impressionante, onde muitas pessoas estão dispostas a ajudar, dessa forma se transforma em uma evolução orgânica, onde os próprios integrantes da comunidade se ajudam e crescem juntos. Estou ansioso para novos aprendizados.
+</article>
+
 <a href="https://www.betrybe.com/" target="_blank">TRYBE</a>
 
 <footer id="rodape" class="footer">
