--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
         <h1 id="titulo">Título</h1>
     </header>
     <main>
-        <article>
+        <section>
             <img id="minha_foto" src="minha-foto.jpg" alt="Foto de Felipe Sanches">
-        </article>
+        </section>
+        <section>
+            <ol id="licoes_aprendidas">
+                <li>CSS</li>
+                <li>Empatia</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>HTML</li>
+                <li>Inspect</li>
+                <li>Semantic HTML</li>
+                <li>Slack</li>
+                <li>Unix</li>
+                <li>Zoom</li>
+            </ol>
+        </section>
     </main>
 </body>
 </html>
