--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <header id="cabecalho"><h1 id="titulo">Lições aprendidas - Trybe!</h1></header>
+    <img src="foto_rosto.jpeg" alt="rosto" id="minha_foto">
 </body>
 </html>
