--- a/index.html
+++ b/index.html
@@ -5,11 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Lições aprendidas</title>
 </head>
 <body>
     <main>
         <img id="minha_foto" src="minhafoto.jpeg" alt="victor calidor">
+        <section>
+            <div>
+                <h2>Lições aprendidas:</h2>  
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>Github</li>
+                    <li>Empatia</li>
+                    <li>Html</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                    <li>Inspect</li>
+                    <li>Semantic Html</li>
+                </ol>
+            </div>
+            <div>
+                <h2>Lições aprendidas:</h2>  
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>                
+            </div>
+        </section>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem esse nam eum, natus fugiat quos omnis ea quam mollitia. Asperiores quod libero nam repudiandae molestiae, a odio corporis sit nemo!</p>
+        </article>
+        <aside>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, repellat! Quidem doloribus cumque dolorem ex vitae voluptatibus ipsum numquam quibusdam sed? Obcaecati dolorum, maiores autem quisquam nobis in itaque doloribus.</p>
+        </aside>
     </main>
+    <footer></footer>
 </body>
 </html>
