--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <article>
     <section>
-      <p>Desde outubro de 2020 tinha vontade de entrar na Trybe e não me arrependo de ter dado esse passo. Nesse inicio de carreira em tecnologia, tenho não só aprendido assuntos acerca de desenvolvimento web, mas tenho aprendido a conviver com pessoas das mais diferentes localidades, é de longe uma das melhores experiências que eu já tive, aprendendo de Unix até CSS, passando por Git e Html, tem sido tudo muito intenso e recompensador.</p>
+      <p>Desde outubro de 2020 tinha vontade de entrar na Trybe e não me arrependo de ter dado esse passo. Nesse inicio de carreira em tecnologia, tenho aprendido muitos assuntos acerca de desenvolvimento web, mas tenho aprendido de Unix até CSS, passando por Git e Html, tem sido tudo muito intenso e recompensador.</p>
     </section>
     <section>
       <aside><p>Desejo me tornar um Desenvolvedor Full-stack de qualidade, tanto por que sei que sou capaz quanto pois sei que a Trybe honrará o compromisso de me passar um conhecimento de qualidade e me dará o suporte necessário.</p>
