--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
       <li>MongoDB</li>
       <li>Estrutura de Dados</li>
     </ul>
+    <footer id="rodape">
+      <p>Criado por Natã Elienai, 2021.</p>
+    </footer>
   </body>
 </html>
