--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
   </header>
 	<main>
 		<img id="minha_foto" src="rsz_pessoaprogamando.jpg" alt="Pessoa Progamando">
+		<ol id="licoes_aprendidas">
+			<li>Fundamentos do Desenvolvimento Web.</li>
+			<li>Introdução-Unix & Shell.</li>
+			<li>Unix & Bash.</li>
+			<li>Git & GitHub.</li>
+			<li>Internet.</li>
+			<li>Intrudução-HTML & CSS.</li>
+			<li>HTML & CSS-Estruturas de página.</li>
+			<li>HTML & CSS-Primeiros passos em CSS.</li>
+			<li>HTML & CSS-Seletores e posicionamento.</li>
+			<li>HTML Semântico.</li>
+		</ol>
 	</main>
     
 </body>
