--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <main>
       <div>
           <img id="minha_foto" src="https://scontent.fcpv20-1.fna.fbcdn.net/v/t1.18169-9/13417402_1747824612095920_2590072420852211395_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=174925&_nc_eui2=AeFgcHcpQjiKIsw6e-3EY6i_cpbgw3WusNlyluDDda6w2ci6DqM8LLHK2yJNjgGL3PxjCqh2cYWzFtsad6jvcBHC&_nc_ohc=b9irE6YDKg0AX-Vg4K0&tn=x23hazxhTZY31b8O&_nc_ht=scontent.fcpv20-1.fna&oh=512b19d0369c42dc14527a93e63f8ee1&oe=6149F2B0" alt="Foto_do_Perfil">
+          <a href="linkedin.com/in/matheus-gomes-189203a3" target="_blank">Meu Linkedin</a>
       </div>
       <div>
           <section>
