add ordered list

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
   </header>
   <div class="container">
     <img src="foto.jpg" alt="uma foto minha" id="minha_foto">
+
+    <p>Lições Aprendidas</p>
+    <ol id="licoes_aprendidas">
+      <li>Unix & Bash</li>
+      <li>Git</li>
+      <li>Github</li>
+      <li>Internet</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Estruturas de Página</li>
+      <li>Seletores</li>
+      <li>Posicionamento</li>
+      <li>Semantic HTML</li>
+    </ol>
   </div>
 </body>
 </html>
