--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <main>
         <article>
             <img id="minha_foto" src="imagens/fiora.jpg" alt="Fiora, a duelista">
+            <ol id="licoes_aprendidas">
+                <li>HTMl</li>
+                <li>CSS</li>
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Auto Conhecimento</li>
+                <li>Empatia</li>
+                <li>Instalar Arch Linux</li>
+                <li>HTML semantico</li>
+                <li>Ingles</li>
+            </ol>
         </article>
     </main>
 </body>
