--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <li>Node</li>
     <li>SQL</li>
 </ul>
+<aside><a href="https://github.com/MilleneGalettiAcosta" target="_blank">Meu Github</a></aside>
 <footer id="rodape">rodapé</footer>
 </body>
 </html>
