--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
     
 <body>
     <header id="cabecalho"><h1 id="titulo">Lições aprendidas - Trybe!</h1></header>
+    </head>
     <img id="minha_foto" src="images/I.jpg" alt="foto-calixto">
-</head>
+    <H2>Lições aprendidas</H2>
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+    </ol>
 </body>
 </html>
