--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 </header>
 <body>
     <img id="minha_foto" src="fotoperfil.jpg" alt="foto de perfil">
-    
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inteligencia Emocial</li>
+        <li>Semantica HTML</li>
+        <li>Comprometimento</li>
+    </ol>
 </body>
 </html>
